trying to fix spacing between home and about sections on different size screens

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -287,11 +287,12 @@ main #home {
   }
 
   #home {
-    height: calc(100vh + 50px);
+    height: calc(100vh + 100px);
   }
 
   .navbar {
     height: 100%;
+    display: none;
   }
   .navbar-toggle {
     display: inline-block;
